# OpenGLtriangle

./: CMakeLists.txt  README.md  autobuild.py  buildSettings.cmake  play.py
autotools/: autobuilder.py
src/: main.cpp
